--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-practice-app",
-  "version": "0.0.0",
+  "name": "ngp",
+  "version": "0.0.0", 
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
