--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: ngP CI Pipeline
+name: CI/CD Pipeline
 on:
   push:
-    branches: [master]
+    branches: [master, develop]
   pull_request:
-    branches: [master]
+    branches: [master, develop]
 
 jobs:
   build:
@@ -15,3 +15,39 @@ jobs:
           node-version: '18'
       - run: npm ci
       - run: npm run build -- --configuration production
+      - uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: dist/
+
+  deploy-staging:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+          path: dist/
+      - name: Deploy to Vercel Staging
+        run: npx vercel --token ${{ secrets.VERCEL_TOKEN }} --name ng-p-staging
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_STAGING }}
+
+  # deploy-production:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   if: github.ref == 'refs/heads/master'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/download-artifact@v3
+  #       with:
+  #         name: dist-files
+  #         path: dist/
+  #     - name: Deploy to Vercel Production
+  #       run: npx vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --name ng-p
+  #       env:
+  #         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  #         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_PROD }}
